crates/server-less/tests/fixtures/http_wrong_type_bool_arg.rs
use server_less::http;

struct MyService;

// Passing a string where a bool is expected should produce a clear type error.
#[http(openapi = "yes")]
impl MyService {
    pub fn hello(&self) -> String {
        "hello".into()
    }
}

fn main() {}
